multilabel nodes and edges